# sample-dbt-core

./: README.md  pyproject.toml
jaffle_shop/: dbt_project.yml
jaffle_shop/models/marts/: order_items.yml  orders.yml
jaffle_shop/models/staging/: __sources.yml  stg_order_items.yml  stg_orders.yml  stg_supplies.yml
jaffle_shop/tests/generic/: test_is_plus.sql
